--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    
+    <!-- Header -->
     <section id="header">
         <a href="#">
             <!-- <img class="logo" src="./public/images/logos/transparentbg.png" alt="logo of MIP">
@@ -31,6 +33,8 @@
     </section>
 
 
+
+    <!-- Hero -->
     <section id="hero">
         <div class="txt">
             <h4>Nurturing Bond</h4>
@@ -45,6 +49,9 @@
     </section>
 
 
+    <!-- Features -->
+
+    <!-- feat 1 -->
     <section id="features" class="section-p1">
         <div class="featBox">
             <img src="./public/images/satisfaction.jpg  " 
@@ -53,42 +60,63 @@
                 >
             <h6>exercise</h6>
         </div>
+
+
+        <!-- feat 2 -->
         <div class="featBox">
-            <img src="./public/images/satisfaction.jpg  " 
+            <img src="./public/images/joyfulmother.webp  " 
                 alt="exercise as mother"
                 width="100%"
                 >
-            <h6>exercise</h6>
+            <h6>Mother and child bond</h6>
         </div>
+
+
+
+        <!-- feat 3 -->
         <div class="featBox">
-            <img src="./public/images/satisfaction.jpg  " 
+            <img src="./public/images/pink-female-figure-with-red-heart-shape (1).webp  " 
                 alt="exercise as mother"
                 width="100%"
                 >
-            <h6>exercise</h6>
+            <h6>Healthy Mother</h6>
         </div>
+
+
+        <!-- feat 4 -->
         <div class="featBox">
-            <img src="./public/images/satisfaction.jpg  " 
+            <img src="./public/images/social.jpg" 
                 alt="exercise as mother"
                 width="100%"
                 >
-            <h6>exercise</h6>
+            <h6>New Letter</h6>
         </div>
+
+
+        <!-- feat 5 -->
         <div class="featBox">
-            <img src="./public/images/satisfaction.jpg  " 
+            <img src="./public/images/web.jpg  " 
                 alt="exercise as mother"
                 width="100%"
                 >
-            <h6>exercise</h6>
+            <h6>Gallery</h6>
         </div>
+
+
+        <!-- feat 6 -->
         <div class="featBox">
-            <img src="./public/images/satisfaction.jpg  " 
+            <img src="./public/images/delivery.jpg  " 
                 alt="exercise as mother"
                 width="100%"
                 >
-            <h6>exercise</h6>
+            <h6>Healthy Baby</h6>
         </div>
     </section>
+
+<!-- Featured Products -->
+    <div id="product1" class="section-p1"></div>
+
+
     <script src='main.js'></script>
 </body>
 
