featured products init

--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
     </section>
 
 <!-- Featured Products -->
-    <div id="product1" class="section-p1"></div>
+    <div id="product1" class="section-p1">
+        <h2>Featured Products</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Asperioresrepellat quis quae in ut exercitationem deserunt 
+            amet aspernatur magnam doloribus.
+        </p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./public/images/delivery.jpg" alt="#">
+            </div>
+            <div class="decription">
+                <span>brand name</span>
+                <h5>child care product</h5>
+                <div class="star">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <h4>$120.04</h4>
+            </div>
+            <a href="#">
+                <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+        </div>
+    </div>
 
 
     <script src='main.js'></script>
